--- a/ARcowabungaproject/res/layout/activity_main.xml
+++ b/ARcowabungaproject/res/layout/activity_main.xml
@@ -1,16 +1,43 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_weight="15"
+        android:contentDescription="image_home"
+        android:background="@drawable/home_image" />
 
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/buttonMenu"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/home_menu_menu" />
+
+    <ImageButton
+        android:id="@+id/buttonShopCart"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/home_menu_actualorder" />
+
+    <ImageButton
+        android:id="@+id/buttonContact"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:background="@drawable/home_menu_contact" />
+
+    <ImageButton
+        android:id="@+id/buttonOldShopCart"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_weight="0.03"
+        android:scaleType="centerCrop"
+        android:background="@drawable/home_menu_lastorders" />
+
+</LinearLayout>
