--- a/TestView/res/layout/activity_tabs.xml
+++ b/TestView/res/layout/activity_tabs.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearlayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -24,19 +25,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
-                <LinearLayout
-                    android:id="@+id/tab1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal" >
-                    <!-- ADDED  FOR THE LISTVIEW-->
+<!--                 <ExpandableListView -->
+<!-- 				        android:id="@+id/listViewexp" -->
+<!-- 				        android:layout_width="match_parent" -->
+<!-- 				        android:layout_height="wrap_content" > -->
+<!-- 			    	</ExpandableListView> -->
+			    	
+<!--                 <LinearLayout -->
+<!--                     android:id="@+id/tab1" -->
+<!--                     android:layout_width="match_parent" -->
+<!--                     android:layout_height="match_parent" -->
+<!--                     android:orientation="vertical"> -->
                     <ExpandableListView
 				        android:id="@+id/listViewexp"
 				        android:layout_width="match_parent"
 				        android:layout_height="wrap_content" >
 			    	</ExpandableListView>
 
-                </LinearLayout>
+<!--                 </LinearLayout> -->
 
                 <LinearLayout
                     android:id="@+id/tab2"
