--- a/layoutTest/res/layout/activity_main.xml
+++ b/layoutTest/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
@@ -8,14 +8,17 @@
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="15"
+        android:layout_height="250dp"
+        android:layout_above="@+id/linearButton1"
+        android:layout_alignParentTop="true"
         android:background="@drawable/home_image" />
 
     <LinearLayout
-        android:id="@+id/button"
+        android:id="@+id/linearButton4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:background="#FE2E2E"
         android:clickable="true"
         android:orientation="horizontal"
@@ -23,8 +26,8 @@
 
         <ImageView
             android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
             android:src="@drawable/ic_launcher" />
@@ -38,82 +41,96 @@
             android:text="Do stuff" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#FE2E2E"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"  >
+   <LinearLayout
+       android:id="@+id/linearButton3"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:layout_above="@+id/linearButton4"
+       android:layout_alignParentLeft="true"
+       android:background="#FE2E33"
+       android:clickable="true"
+       android:orientation="horizontal"
+       android:paddingLeft="20dp" >
 
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/ic_launcher" />
+       <ImageView
+           android:id="@+id/img"
+           android:layout_width="34dp"
+           android:layout_height="34dp"
+           android:layout_gravity="center_vertical"
+           android:layout_marginLeft="5dp"
+           android:src="@drawable/ic_launcher" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="5dp"
-            android:text="Do stuff" />
-    </LinearLayout>
+       <TextView
+           android:id="@+id/textView2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center_vertical"
+           android:layout_margin="5dp"
+           android:text="Do stuff" />
+   </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#FE2E2E"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"  >
+   <LinearLayout
+       android:id="@+id/linearButton2"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:layout_above="@+id/linearButton3"
+       android:layout_alignParentLeft="true"
+       android:background="#F22E2E"
+       android:clickable="true"
+       android:orientation="horizontal"
+       android:paddingLeft="20dp" >
 
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/ic_launcher" />
+       <ImageView
+           android:id="@+id/img"
+           android:layout_width="34dp"
+           android:layout_height="34dp"
+           android:layout_gravity="center_vertical"
+           android:layout_marginLeft="5dp"
+           android:src="@drawable/ic_launcher" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="5dp"
-            android:text="Do stuff" />
-    </LinearLayout>
+       <TextView
+           android:id="@+id/textView2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center_vertical"
+           android:layout_margin="5dp"
+           android:text="Do stuff" />
+   </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#FE2E2E"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"  >
+   <LinearLayout
+       android:id="@+id/linearButton1"
+       android:layout_width="match_parent"
+       android:layout_height="50dp"
+       android:layout_above="@+id/linearButton2"
+       android:layout_alignParentLeft="true"
+       android:background="#FE2355"
+       android:clickable="true"
+       android:orientation="horizontal"
+       android:paddingLeft="20dp" >
 
-        <ImageView
-            android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/ic_launcher" />
+       <ImageView
+           android:id="@+id/img"
+           android:layout_width="34dp"
+           android:layout_height="34dp"
+           android:layout_gravity="center_vertical"
+           android:layout_marginLeft="5dp"
+           android:src="@drawable/ic_launcher" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="5dp"
-            android:text="Do stuff" />
-    </LinearLayout>
+       <TextView
+           android:id="@+id/textView2"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center_vertical"
+           android:layout_margin="5dp"
+           android:text="Do stuff" />
+   </LinearLayout>
 
-</LinearLayout>
+   <View
+       android:id="@+id/view1"
+       android:layout_width="match_parent"
+       android:layout_height="5dp"
+       android:layout_alignParentLeft="true"
+       android:layout_alignTop="@+id/linearButton1"
+       android:background="@drawable/gradient" />
+    
+</RelativeLayout>
