--- a/TestView/res/layout/activity_main.xml
+++ b/TestView/res/layout/activity_main.xml
@@ -1,43 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="15"
-        android:contentDescription="image_home"
+        android:layout_height="250dp"
+        android:layout_above="@+id/linearButton1"
+        android:layout_alignParentTop="true"
         android:background="@drawable/home_image" />
 
-    <ImageButton
-        android:id="@+id/buttonMenu"
+    <LinearLayout
+        android:id="@id/linearButton1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/home_menu_menu" />
+        android:layout_above="@+id/linearButton2"
+        android:background="#ad2334"
+        android:clickable="true"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp" >
 
-    <ImageButton
-        android:id="@+id/buttonShopCart"
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:text="CARTA"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@id/linearButton2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:scaleType="centerCrop"
-        android:background="@drawable/home_menu_actualorder" />
+        android:layout_above="@+id/linearButton3"
+        android:layout_alignParentLeft="true"
+        android:background="#8d1f2a"
+        android:clickable="true"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp" >
 
-    <ImageButton
-        android:id="@+id/buttonContact"
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:text="PEDIDO ACTUAL"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearButton3"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:scaleType="centerCrop"
-        android:background="@drawable/home_menu_contact" />
+        android:layout_above="@+id/linearButton4"
+        android:background="#711b23"
+        android:clickable="true"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp" >
 
-    <ImageButton
-        android:id="@+id/buttonOldShopCart"
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:text="CONTACTO"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearButton4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_weight="0.03"
-        android:scaleType="centerCrop"
-        android:background="@drawable/home_menu_lastorders" />
+        android:layout_alignParentBottom="true"
+        android:background="#5a1b22"
+        android:clickable="true"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp" >
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="5dp"
+            android:text="PEDIDOS ANTERIORES"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@+id/linearButton1"
+        android:background="@drawable/gradient3" />
+
+</RelativeLayout>
