--- a/TestView/res/layout/activity_main.xml
+++ b/TestView/res/layout/activity_main.xml
@@ -9,15 +9,15 @@
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_above="@+id/linearButton1"
+        android:layout_above="@+id/linearButtonMenu"
         android:layout_alignParentTop="true"
         android:background="@drawable/home_image" />
 
     <LinearLayout
-        android:id="@id/linearButton1"
+        android:id="@id/linearButtonMenu"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_above="@+id/linearButton2"
+        android:layout_above="@+id/linearButtonPedidoActual"
         android:background="#ad2334"
         android:clickable="true"
         android:orientation="horizontal"
@@ -42,10 +42,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@id/linearButton2"
+        android:id="@id/linearButtonPedidoActual"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_above="@+id/linearButton3"
+        android:layout_above="@+id/linearButtonContacto"
         android:layout_alignParentLeft="true"
         android:background="#8d1f2a"
         android:clickable="true"
@@ -71,10 +71,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearButton3"
+        android:id="@+id/linearButtonContacto"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_above="@+id/linearButton4"
+        android:layout_above="@+id/linearButtonPedidosAnteriores"
         android:background="#711b23"
         android:clickable="true"
         android:orientation="horizontal"
@@ -99,7 +99,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearButton4"
+        android:id="@+id/linearButtonPedidosAnteriores"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
@@ -131,7 +131,7 @@
         android:layout_width="match_parent"
         android:layout_height="6dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/linearButton1"
+        android:layout_alignTop="@+id/linearButtonMenu"
         android:background="@drawable/gradient3" />
 
 </RelativeLayout>
