--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -80,6 +80,7 @@
         android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:background="@drawable/home_image"
         android:contentDescription="" />
 
     <View
