--- a/layoutTest/res/layout/activity_second.xml
+++ b/layoutTest/res/layout/activity_second.xml
@@ -16,7 +16,8 @@
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:tabStripEnabled="false" >
             </TabWidget>
 
             <FrameLayout
