--- a/layoutTest/res/layout/tab_bg_selected.xml
+++ b/layoutTest/res/layout/tab_bg_selected.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
-	<gradient android:startColor="#A8A8A8" android:centerColor="#7F7F7F"
-		android:endColor="#696969" android:angle="-90" />
+	<gradient android:startColor="#3be0d0" android:centerColor="#3be0d0"
+		android:endColor="#3be0d0" android:angle="-90" />
 </shape>
