--- a/layoutTest/res/layout/tabs_bg.xml
+++ b/layoutTest/res/layout/tabs_bg.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tabsLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
-    android:orientation="vertical"
     android:padding="10dip" >
 
     <TextView
@@ -14,4 +13,12 @@
         android:text="Title"
         android:textSize="15dip" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:adjustViewBounds="false"
+        android:src="@drawable/ic_launcher" />
+
+</RelativeLayout>
