--- a/layoutTest/res/layout/tabs_bg.xml
+++ b/layoutTest/res/layout/tabs_bg.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tabsLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center" >
+    android:gravity="center"
+    android:orientation="vertical"
+    android:background="#3be0d0" >
 
     <TextView
         android:id="@+id/tabsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_launcher"
+        android:gravity="center_vertical"
         android:text="Title"
         android:textSize="15dip" />
 
-</RelativeLayout>
+</LinearLayout>
