--- a/TestView/res/layout/splash_screen.xml
+++ b/TestView/res/layout/splash_screen.xml
@@ -10,4 +10,13 @@
         android:contentDescription="@string/app_name"
         android:scaleType="fitXY"
         android:src="@drawable/splashscreen" />
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="77dp" />
+
 </RelativeLayout>
