--- a/TestView/res/layout/tabs_bg.xml
+++ b/TestView/res/layout/tabs_bg.xml
@@ -5,12 +5,14 @@
     android:layout_height="fill_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10dip" >
+    android:background="#3be0d0" >
 
     <TextView
         android:id="@+id/tabsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_launcher"
+        android:gravity="center_vertical"
         android:text="Title"
         android:textSize="15dip" />
 
