--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -36,6 +36,7 @@
         android:layout_toLeftOf="@+id/priceTextInItem"
         android:layout_toRightOf="@id/imageInItem"
         android:background="#335533"
+        android:textColor="#E63444"
         android:text="titol" >
     </TextView>
 
@@ -48,7 +49,8 @@
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="13dp"
-        android:background="#FF3333" 
+        android:background="#FF3333"
+        android:textColor="#E63444"
         android:text="preu">
     </TextView>
 
