Improving the TabMaker Class

--- a/TestView/res/layout/content_tab.xml
+++ b/TestView/res/layout/content_tab.xml
@@ -4,12 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/content_text_tab"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="HELLO" >
-    </TextView>
+    
+        <ExpandableListView
+            android:id="@+id/listViewexp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
+            android:headerDividersEnabled="true"
+			android:footerDividersEnabled="true">
+            
+<!--             android:divider="#000000" -->
+<!--   			android:dividerHeight="1sp" -->
+<!--     		android:childDivider="#000000" -->
+<!-- 		    android:headerDividersEnabled="true" -->
+<!-- 		    android:footerDividersEnabled="true" -->
+<!-- 		    android:scrollingCache="false" -->
+<!-- 		    android:cacheColorHint="#00000000" -->
+<!-- 		    android:drawSelectorOnTop="true"> -->
+        </ExpandableListView>
 
 </LinearLayout>
